--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
     <title>fertility-innovator-reborn</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
